--- a/templates/instructions.html
+++ b/templates/instructions.html
@@ -1,1 +1,83 @@
-<!DOCTYPE HTML>
+{% extends layout.html %}
+
+{% block title %}
+  Instructions
+{% endblock %}
+
+
+{% block main %}
+<script src="http://strapdownjs.com/v/0.2/strapdown.js"></script>
+<xmp theme="united">
+  ## **+ Shoes and Boots**
+
+* **Trekfresh will prevent odors for the life of most shoes and boots, but periodic reapplication may be necessary especially if footwear is washed often. For footwear with heavy odors, some odors may still be present immediately after application but will usually disappear by the next day.**
+<p>
+* 1) Shake the bottle well.
+* 2) Remove insoles, if applicable.
+* 3) Apply 5-10 sprays of product to the inside of each shoe. Make sure the entire inside of the shoe is wet.
+* 4) Apply 1-2 sprays of to each side of insoles, if applicable.
+* 5) For frequently washed footwear, place footwear into a plastic bag to prevent product from evaporating and leave overnight in a warm place.
+* 6) Allow shoes to dry completely before wearing.
+
+
+## **+ Clothing**
+
+* **Trekfresh will prevent odors on socks, underwear, workout clothing, and more. For natural fibers and blends including cotton, wool, rayon, linnen, bamboo, etc., one application of Trekfresh will usually prevent odors for the life of the garment. For synthetic fabrics, Trekfresh has more difficulty binding to the fibers, but will last up to 10 washes.**
+<p>
+* *For natural fibers, consider the wash in method*
+<p>
+* 1) Wash and dry garments before applying.
+* 2) Shake the bottle well for 30 seconds.
+* 3) Turn garments inside out.
+* 4) Spray generously until uniformly damp. Extra product may be applied to armpits of shirts or other odor prone areas.
+* 5) For synthetic fibers, place garments into a plastic bag to prevent trekfresh from evaporating and leave overnight in a warm place. (not necessary for natural fibers)
+* 6) Dry garments as usual..
+* 7) Garments can be worn as soon as they are dry. 
+* 8) Treatment will generally last the lifetime of the garment.
+
+
+## **+ Gear**
+
+* **Do not apply Trekfresh or any other fabric treatment to safety critical gear like climbing ropes or harnesses. Always shake product well before use**  
+* *If possible, always launder or clean items before applying TrekFresh*    
+<p>
+* 1) Do not apply TrekFreshto DWR (water resistant) surfaces like the outsides of tends or rain jackets as TrekFresh may interfere with the DWR coating and cause fabric to wet out
+* 2) For synthetic materials, always put them into a bag or container that will prevent TrekFresh from evaporating and leave overnight to allow TrekFresh to chemically bind to material.
+* 3) When in doubt, apply TrekFresh only to areas that are prone to developing odors
+
+
+## **+ Sleeping Bags**
+* *Thoroughly wash and dry sleeping bag before application*
+<p>
+* 1) Shake TrekFresh well for 30 seconds
+* 2) Turn sleeping bag inside out
+* 3) Spray a light coat of TrekFresh over the inside of the sleeping bag. Do not heavily saturate fabric of down sleeping bags as TrekFresh may reduce the down’s loft.
+* 4) Insert sleeping bag into a plastic bag to prevent TrekFresh from evaporating, and leave overnight in a warm location so that trekfresh can chemically bind to the fabric.
+* 5) Sleeping bag may be used immediately or laundered again before use
+
+## **+ Wash-in**
+* *TrekFresh may be applied as a wash in treatment for natural fibers only.*
+<p>
+* 1) Launder articles before applying TrekFresh. Drying is not necessary prior to wash in treatment.
+* 2) Fill container such as bucket, wash tub, or sink with warm water
+* 3) Add a full bottle of TrekFresh to water and mix thoroughly. Do not add any other fabric treatments or soaps.
+* 4) Let articles soak for at least one hour and agitate occasionally.
+* 5) After at least one hour, wring out articles and dry as normal.
+
+## **+ Pet Bedding**
+<span class = yikes>*If pet beds are made with natural fibers, the wash in method is preferable, otherwise, follow these instructions:* </span>
+
+* 1) If possible, launder the bed before applying TrekFresh
+* 2) Shake bottle well
+* 3) Spray TrekFresh liberally over the top of the pet bed. For full sized dog beds, apply the whole bottle of TrekFresh for smaller beds, less product will be needed.
+* 4) Massage pet bed to work as much product as possible deeper into the cushioning.
+* 5) Place pet bed in a plastic bag or container overnight to prevent evaporation and leave in a warm location.
+* 6) Allow pet bed to dry
+* 7) Bed can be used immediately.
+</xmp>
+
+{% endblock %}
+
+
+
+  
